force-app/main/default/objects/CRMforNonProfit__NNOMapping__c/CRMforNonProfit__NNOMapping__c.object-meta.xml
<CustomObject>
    <label>NNOMapping</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>NNOMapping Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NNOMapping</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>