force-app/main/default/objects/CRMforNonProfit__NNOMapping__c/fields/CRMforNonProfit__DarujmeCZ_Field__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__DarujmeCZ_Field__c</fullName>
    <label>DarujmeCZ_Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>