force-app/main/default/objects/CRMforNonProfit__NNOMapping__c/fields/CRMforNonProfit__Object__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Object__c</fullName>
    <label>Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Transaction</fullName>
            </value>
            <value>
                <fullName>Pledge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>